2005-08-12	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Applied patch [#1391] by Sebastian Ubalde (double form submission checks), 
	fixed conflicts with register_globals patch.

2005-08-10  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* [#1022] register_globals=off patch is applied.

2005-07-27  Francisco Gimeno <francisco@gforgegroup.com>

	* Fixed XSS vulnerabilities by adding htmlspecialchars for direct used
	variables: files search/index.php, snippet/detail.php,
	include/exit.php, include/logger.php, account/login.php

2005-07-18  Francisco Gimeno <francisco@gforgegroup.com>

	* Fixed [#1412] $this in non-class file (migraterbac.php). Added exit
	functions. Patch by Fernando Usero

2005-07-07  Christian Bayle <bayle@debian.org>

	* Fixed [#1394] duplicate SCM summary in project home page
	* Fixed [#1325] Error on the index.php of all the projects page
	* Fixed [#1395] index.php doesn't have right permissions
	  patch by Fernando Usero
	* Fixed [#1402] wrong cron.d config of gforge-plugin-scmcvs

2005-06-30	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Added FRS interface to the SOAP server
	* Fixed a couple of things in the Task manager interface in the SOAP server

2005-06-28	Tim Perdue	<tim@gforge.org>

	* Added a customizable template file for Group->approve() function
	which means the number of trackers, fields, and elements in each 
	tracker can be modified more easily

2005-06-29	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Added the extra field alias to the field cloning procedue

2005-06-28	Marcelo Mottalli	<marcelo@gforgegroup.com>

	* Changed the handling of extra fields aliases. Now, when no alias
		is specified, it automatically generates one, and when there's a 
		conflict with aliases a new alias is also generated automatically.

2005-06-28	Tim Perdue	<tim@gforge.org>

	* Added a sys_template_group var
	* Added tracking cloning to copy all fields from any tracker in template group
	* Better navigation in tracker admin
