@@ -10,6 +10,9 @@
  */
 
 $ath->header(array ('title'=>$Language->getText('tracker_mod','delete_title').': '.$ah->getID(). ' - ' . $ah->getSummary(),'atid'=>$ath->getID()));
+
+// $atid, $aid and $group_id are set in tracker.php
+
 ?>
 
 <form action="<?php echo getStringFromServer('PHP_SELF')."?aid=$aid&amp;group_id=$group_id"; ?>" method="post">
