@@ -109,14 +109,15 @@ switch (getStringFromRequest('func')) {
 			exit_form_double_submit();
 		}
 
-		$artifact_id_list = getStringFromRequest('artifact_id_list');
+		$artifact_id_list = getArrayFromRequest('artifact_id_list');
 		$priority = getStringFromRequest('priority');
 		$status_id = getStringFromRequest('status_id');
 		$category_id = getStringFromRequest('category_id');
 		$artifact_group_id = getStringFromRequest('artifact_group_id');
 		$resolution_id = getStringFromRequest('resolution_id');
 		$assigned_to = getStringFromRequest('assigned_to');
-
+		$canned_response = getIntFromRequest("canned_response");
+		
 		$count=count($artifact_id_list);
 
 		if (!$ath->userIsAdmin()) {
